# hms2

./: README.md  pyproject.toml
hms2/core/: builder.py  compressors.py  custom_modules.py  custom_vit_modules.py  fixup_resnet.py  loader_modules.py  model.py  resnetv1c.py
hms2/pipeline/: test.py  train.py  visualize.py
hms2/pipeline/components/: callbacks.py  config.py  dataset.py  event_logging.py  losses.py  main.py  main_emb.py  metrics.py  official_openslide.py  optimizers.py  saver.py  utils.py
hms2/pipeline/evaluation/: evaluate_categorical.py  evaluate_heatmap.py  evaluate_multilabel.py  evaluate_roc.py  get_representative_patch.py  utils.py
projects/Camelyon16/test_configs/: 10x.yaml  2.5x.yaml  20x.yaml  5x.yaml
projects/Camelyon16/train_configs/: 10x.yaml  2.5x.yaml  20x.yaml  5x.yaml
scripts/: post_install.py
tests/core/: test_builder.py  test_compressors.py  test_custom_modules.py  test_loader_modules.py  test_model.py
